--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,12 @@ colorama==0.4.6
 Flask==3.1.2
 Flask-SQLAlchemy==3.1.1
 greenlet==3.3.0
+gunicorn==23.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 load-dotenv==0.1.0
 MarkupSafe==3.0.3
+packaging==25.0
 python-dotenv==1.2.1
 SQLAlchemy==2.0.45
 typing_extensions==4.15.0
